src/snapshots/roboplc__pchannel_async__test__delivery_policy_optional-2.snap
---
source: src/pchannel_async.rs
expression: messages
---
[
    Test(
        123,
    ),
    Temperature(
        123.0,
    ),
    Test(
        123,
    ),
    Temperature(
        123.0,
    ),
    Test(
        123,
    ),
    Temperature(
        123.0,
    ),
    Test(
        123,
    ),
    Temperature(
        123.0,
    ),
    Test(
        123,
    ),
    Temperature(
        123.0,
    ),
    Test(
        123,
    ),
    Temperature(
        123.0,
    ),
    Test(
        123,
    ),
    Temperature(
        123.0,
    ),
    Test(
        123,
    ),
    Temperature(
        123.0,
    ),
    Test(
        123,
    ),
    Temperature(
        123.0,
    ),
    Test(
        123,
    ),
    Temperature(
        123.0,
    ),
]
