src/snapshots/roboplc__pchannel_async__test__delivery_policy_single-3.snap
---
source: src/pchannel_async.rs
expression: messages
---
[
    Test(
        123,
    ),
    Spam,
    Test(
        123,
    ),
    Spam,
    Test(
        123,
    ),
    Spam,
    Test(
        123,
    ),
    Spam,
    Test(
        123,
    ),
    Spam,
    Test(
        123,
    ),
    Spam,
    Test(
        123,
    ),
    Spam,
    Test(
        123,
    ),
    Spam,
    Test(
        123,
    ),
    Spam,
    Test(
        123,
    ),
    Spam,
    Temperature(
        123.0,
    ),
]
